--- a/pages/style.css
+++ b/pages/style.css
@@ -2,7 +2,9 @@ div {
   background: skyblue;
   border-style: ridge;
   width: 50%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
 }
 
 header {
