--- a/pages/style.css
+++ b/pages/style.css
@@ -12,7 +12,7 @@ header {
   text-align: center;
   background: green;
   border-style: ridge;
-  width: 50%
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
